# aria

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
aria/: manage.py  urls.py  wsgi.py
aria/article/: models.py
aria/core/: blocks.py  models.py
aria/core/migrations/: 0002_create_homepage.py  0003_licensesnippet.py  0003_licensesnippet_website_featured_image_and_more.py  0004_website_story.py  0005_alter_website_story.py  0006_alter_website_story.py  0007_alter_website_story.py  0008_website_footer_menu_website_header_menu.py  0009_alter_website_footer_menu_alter_website_header_menu.py  0010_alter_website_footer_menu_alter_website_header_menu.py  0011_navigationsettings.py  0012_alter_navigationsettings_header_menu_and_more.py  0013_rename_header_menu_navigationsettings_primary_navigation_and_more.py  0014_rename_footer_description_navigationsettings_footer_text.py  0015_website_featured_image_website_heading_website_intro.py  0016_alter_navigationsettings_footer_navigation_and_more.py
aria/documents/: models.py
aria/documents/migrations/: 0001_initial.py  0002_standarddocument_source.py  0004_alter_standarddocument_description.py  (+4 more)
aria/images/: models.py
aria/person/: models.py
aria/settings/: base.py  dev.py
aria/standardpage/: models.py
aria/static/: package-lock.json  package.json  tailwind.config.js  webpack.config.js
aria/static_source/: package-lock.json  package.json  tailwind.config.js  webpack.config.js
aria/templates/: base.html
docs/: Update_docker_image.md
public/favicon/: site.webmanifest
(+33 files in other folders)
