[tool.poetry]
name = "aria"
version = "0.1.0"
description = "Content server"
authors = ["Ole Kristian Losvik <losvik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "^4.0.2"
Django = "^4.1.1"
wagtail-markdown = "^0.10.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
