[tool.poetry]
name = "aria"
version = "0.1.0"
description = "Content server"
authors = ["Ole Kristian Losvik <losvik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "^4.0.2"
Django = "^4.1.2"
wagtail-markdown = "^0.10.0"
django-storages = "^1.13.1"
boto3 = "^1.24.89"
dj-database-url = "^1.0.0"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
psycopg2-binary = "^2.9.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
